# tauri-seaorm-template

./: README.md  package.json  pnpm-lock.yaml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/service/: Cargo.toml
src-tauri/service/src/: lib.rs  mutation.rs  query.rs
src-tauri/src/: main.rs
src/components/: Greet.vue
