[package]
name = "tauri-seaorm-template"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.29.0", features = ["full"] }
anyhow = "1.0.71"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = [".", "service", "entity", "migration"]
